--- a/style.css
+++ b/style.css
@@ -5,29 +5,40 @@
 
 body {
   /* background-color: #F5F5DC; */
-  background-color: #F7F9F2;
+  background: url(./image/rm141-nunny-02b.jpg);
+  /* background-color: #eee; */
+  font-family: "Noto Serif KR", serif;
+  font-weight: 600;
+  background-size: cover;
 }
 
 .container {
   height: 100vh;
   box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
-  background-color: #fff;
+  background-color: #F5F7F8;
   max-width: 800px;
 }
 
 .title {
   padding: 20px;
+  font-weight: 900;
 }
 
 .input-box {
   margin: 0 10px 20px;
+  display: flex;
+  align-items: end;
 }
 
 #todo-input {
-  width: 30em;
-  height: 2.5em;
-  border: 1px solid lightgray;
-  padding-left: 10px;
+  width: 80%;
+  height: 2.6em;
+  /* border: 1px solid lightgray; */
+  box-shadow : rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border: none;
+  padding-left: 20px;
+  background-color: #F5F7F8;
+  margin-right: 7px;
 }
 
 #todo-input:focus {
@@ -36,19 +47,43 @@ body {
 }
 
 #add-btn {
-  padding: 8px 14px;
-  border: 1px solid lightgray;
+  padding: 7px 14px;
+  box-shadow : rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: #102C57;
+  margin: 0 7px;
+}
+
+#add-btn:hover {
+  background-color: #eee;
+  transition: 0.3s;
+}
+
+#delete-all {
+  padding: 9px 10px;
+  box-shadow : rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: #F5F7F8;
+  font-size: 16px;
+  vertical-align: bottom;
+  font-weight: 500;
+  transition: 0.3s;
+}
+
+#delete-all:hover {
+  color: #eee;
+  background-color: #102C57;
 }
 
 .tab-box {
   display: flex;
-  border: 1px solid lightgray;
+  /* border: 1px solid lightgray; */
   margin: 0 10px 0;
   position: relative;
+  box-shadow : rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 20px 0 20px 0;
 }
 
 .tab {
-  padding: 1em;
+  padding: 1.2em;
 }
 
 .tab:hover {
@@ -59,35 +94,49 @@ body {
   position: absolute;
   height: 3px;
   width: 64px;
-  background-color: #87A922;
+  background-color: #102C57;
   padding: 0;
-  top: 53px;
+  top: 60px;
   left: 0;
   transition: 0.4s;
 }
 
 .todo-list { 
   display: flex;
-  border-bottom: 1px solid lightgray;
+  /* border-bottom: 1px solid lightgray;
   border-right: 1px solid lightgray;
-  border-left: 1px solid lightgray;
-  margin: 0 10px;
+  border-left: 1px solid lightgray; */
+  margin: 15px 10px;
   justify-content: space-between;
+  box-shadow : rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 20px 0 20px 0;
+  overflow: hidden;
+}
+
+.todo-item-box {
+  padding: 1em;
+  display: flex;
+  align-items: center;
 }
 
 .todo-item {
-  padding: 1em;
+}
+
+.todo-item span {
+  vertical-align: text-bottom;
 }
 
 .btn-box {
   font-size: 0;
+  display: flex;
 }
 
 .icon-btn {
   padding: 20px 30px;
-  background-color: #fff;
+  background-color: transparent;
   border: none;
   font-size: 18px;
+  transition: 0.3s;
 }
 
 .icon-btn:hover {
@@ -95,8 +144,16 @@ body {
 }
 
 /* font awesome icon*/
+.fa-list-check {
+  margin-right: 15px;
+}
+
 .fa-plus {
-  color: #87A922;
+  color: #fff;
+}
+
+.fa-plus:hover {
+  color: #102C57;
 }
 
 .fa-check {
@@ -107,7 +164,39 @@ body {
   color: red;
 }
 
+.fa-circle {
+  vertical-align: sub;
+  margin: 0 10px;
+}
+
 .task-done {
   background-color: #ccc;
   text-decoration: line-through;
+}
+
+
+/* .edit-input {
+  display: none;
+}
+
+.edit-active {
+  display: block;
+} */
+
+@media screen and (max-width: 50em) {
+  .input-box {
+  }
+
+  #todo-input {
+    width: 50%;
+  }
+
+  .icon-btn {
+    padding: 15px;
+  }
+
+  .btn-box {
+    margin-right: 10px;
+  }
+
 }
